--- a/src/components/layout/MainNavigation.module.css
+++ b/src/components/layout/MainNavigation.module.css
@@ -39,7 +39,7 @@
   }
   
   .badge {
-    background-color: #cc2062;
+    background-color: #25358b;
     color: white;
     border-radius: 12px;
     padding: 0 1rem;
